# publicmlopstextclassification

./: readme.md
.github/workflows/: model_serving.yaml  model_training.yaml
airflow/: Dockerfile  docker-compose.yml  entrypoint.sh  readme.md
airflow/dags/: text_classification_pipeline.py
model_serving/: Dockerfile  monitoring_config.yaml  readme.md
model_serving/blazemeter/: my-config.yml
model_serving/graphana/: dashboard.json  readme.md
model_serving/prometheus/: Dockerfile  prometheus.yml  readme.md
model_training/: Dockerfile  entrypoint.py  pyproject.toml
model_training/textclassification/gateways/: mlflow.py  stackoverflow.py
model_training/textclassification/model/: builder.py  trainer.py
model_training/textclassification/preprocessing/: preprocess.py
model_training/textclassification/tasks/: retrain_model.py  train_model.py
model_training/textclassification/utils/: configurations.py  dates.py  spark.py
