[tool.poetry]
name = "textclassification"
version = "0.1.0"
description = ""
authors = ["authorname <email@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
click = "^8.1.7"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "2.10.1"
tensorflow-cpu = "2.10.1"
mlflow-skinny = "2.9.2"
scikit-learn = "1.3.2"

[tool.poetry.group.dev.dependencies]
pyspark = "^3.5.0"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
